# Utility

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  utility-config.cmake
src/Utility/: CMakeLists.txt  Global.hpp  Meta.hpp  Scope.hpp  StackHelper.hpp
